# bitt

./: .gitignore  Cargo.toml  LICENSE  README.md  archlinux-2026.06.01-x86_64.iso.torrent  file.torrent  test.torrent  test1.torrent
src/: main.rs
src/client/: app.rs
src/protocol/: bencode.rs  bitfield.rs  connection.rs  file.rs  mod.rs  peer.rs  peerinfo.rs  receiver.rs  request.rs  response.rs  sender.rs  session.rs  storage.rs  tracker.rs
