[package]
name = "bitt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
epaint = "0.27"
sha1 = "0.11.0"
sha2 = "0.11.0"
eframe = '0.34.3'
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
image = '0.25.6'
rfd = "0.17.2"

# HTTP
httparse = "1.10.1"
http_wire = "0.7.1"
bytes = "1.11.1"
http = "1.4.1"
http-body-util = "0.1.3"
url = "2.5.8"
anyhow = "1.0.102"
