[package]
name = "bitt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
epaint = "0.27"
sha1 = "0.11.0"
sha2 = "0.11.0"
eframe = '0.34.3'
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
image = '0.25.6'
rfd = "0.17.2"
reqwest = "0.13.4"
anyhow = "1.0.102"
url = "2.5.8"
